# warpgrapher

./: .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE.md  README.md
.github/workflows/: audit.yml  book.yml  build.yml  publish.yml  test.yml
book/: book.toml  build.sh  dev.sh
book/src/: SUMMARY.md
book/src/advanced/: global_context.md
book/src/api/: crud_nodes.md.old  crud_rels.md.old  intro.md  node.md  node_create.md  node_delete.md  node_read.md  node_update.md  rel_create.md  rel_delete.md  rel_read.md  rel_update.md  static_endpoints.md
book/src/configuration/: databases.md  formats.md  intro.md  relationships.md  types.md
book/src/engine/: context_global.md  context_request.md  dynamic_props.md  dynamic_rels.md  endpoints.md  endpoints_defined.md  endpoints_static.md  event_handlers.md  extensions.md  handlers.md  input_validation.md  intro.md  validators.md
docs/: 404.html  index.html  print.html  searchindex.js  searchindex.json
docs/.warpgrapher/: databases.html
docs/api/: crud_nodes.html  curd_rels.html  endpoints_defined.html  endpoints_static.html  intro.html  node_create.html  node_delete.html  node_read.html  node_update.html  rel_create.html  rel_delete.html  rel_read.html  rel_update.html
docs/configuration/: databases.html  formats.html  intro.html  relationships.html  types.html
docs/engine/: context_global.html  context_request.html  dynamic_props.html  dynamic_rels.html  endpoints_defined.html  endpoints_static.html  event_handlers.html  input_validation.html  intro.html
docs/integrations/: actix.html  intro.html  lambda.html
docs/src/: SUMMARY.md
docs/v1/: Usage.md
docs/warpgrapher/: config.html  databases.html  intro.html  quickstart.html
examples/dynamic_props/: main.rs
examples/dynamic_rels/: main.rs
examples/endpoints/: main.rs
examples/event_handlers/: main.rs
examples/global_context/: main.rs
examples/programmatic_config/: main.rs
examples/project-tracker/: actix_server.rs  config.yml  main.rs
examples/quickstart/: config.yml  main.rs
examples/request_context/: main.rs
examples/validation/: main.rs
examples/yaml_config/: config.yaml  main.rs
src/: error.rs  lib.rs  main.rs
src/client/: mod.rs
src/engine/: config.rs  context.rs  events.rs  extensions.rs  loader.rs  mod.rs  neo4j.rs  objects.rs  resolvers.rs  schema.rs  validators.rs  value.rs  visitors.rs
src/server/: config.rs  context.rs  extensions.rs  headers.rs  mod.rs  objects.rs  resolvers.rs  schema.rs  value.rs  visitors.rs
tests/: client_test.rs  comparison_tests.rs  custom_resolver_test.rs  custom_validator_test.rs  event_facade_test.rs  event_handler_test.rs  node_mnmt_resolver_test.rs  node_mnst_resolver_test.rs  node_resolver_test.rs  node_scalar_resolver_test.rs  node_snmt_resolver_test.rs  node_snst_resolver_test.rs  rel_mnmt_resolver_test.rs  rel_mnst_resolver_test.rs  rel_resolver_test.rs  rel_snmt_resolver_test.rs  rel_snst_resolver_test.rs  server_test.rs  version-numbers.rs  version_numbers.rs
tests/fixtures/: config.yml  config_minimal.yml  minimal.yml  scalar_list.yml  scalar_no_list.yml  test_config_compose_0.yml  test_config_compose_1.yml  test_config_compose_2.yml  test_config_duplicate_endpoint.yml  test_config_duplicate_type.yml  test_config_err.yml  test_config_missing_endpoint_type.yml  test_config_node_prop_name_id.yml  test_config_ok.yml  test_config_rel_prop_name_id.yml  test_config_scalar_endpoint_input_type_name_boolean.yml  test_config_scalar_endpoint_input_type_name_float.yml  test_config_scalar_endpoint_input_type_name_id.yml  test_config_scalar_endpoint_input_type_name_int.yml  test_config_scalar_endpoint_input_type_name_string.yml  test_config_scalar_endpoint_output_type_name_boolean.yml  test_config_scalar_endpoint_output_type_name_float.yml  test_config_scalar_endpoint_output_type_name_id.yml  test_config_scalar_endpoint_output_type_name_int.yml  test_config_scalar_endpoint_output_type_name_string.yml  test_config_scalar_type_name_boolean.yml  test_config_scalar_type_name_float.yml  test_config_scalar_type_name_id.yml  test_config_scalar_type_name_int.yml  test_config_scalar_type_name_string.yml  test_config_with_custom_prop_resolver.yml  test_config_with_custom_resolver.yml  test_config_with_custom_validator.yml  test_config_with_version_100.yml
tests/setup/: actix_server.rs  extension.rs  mod.rs  server.rs
warpgrapher_macros/: Cargo.toml
warpgrapher_macros/src/: lib.rs
warpgrapher_macros/tests/: macro_tests.rs
(+58 files in other folders)
