[package]
name = "warpgrapher"
authors = ["Javier Vazquez"]
description = "Automate web service creation with GraphQL and Neo4J"
homepage = "https://warpforge.github.io/warpgrapher/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/warpforge/warpgrapher"
readme = "README.md"
keywords = ["graphql", "neo4j"]
categories = ["web-programming"]
version = "0.3.0"
edition = "2018"

[features]
cosmos = ["gremlin-client"]
gremlin = ["gremlin-client"]
neo4j = ["bb8", "bb8-bolt", "bolt-client", "bolt-proto"]

[dependencies]
# Mandatory dependencies
async-trait = "0.1.36"
http = "0.2.1"
Inflector = "0.11.4"
juniper = "0.14.2"
log = "0.4.6"
num_cpus = "1.0"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.8"
tokio = "0.2.21"
uuid = { version = "0.8.1", features = ["v4"] }

# Optional dependencies
bb8 = { version = "0.4.2", optional = true }
bb8-bolt = { version = "0.4.0", optional = true }
bolt-client = { version = "0.7.0", optional = true }
bolt-proto = { version = "0.8.0", optional = true }
gremlin-client = { version = "0.6.1", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
env_logger = "0.6.1"
futures = "0.3.1"
maplit = "1.0.2"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
version-sync = "0.9.0"
