[package]
name = "warpgrapher"
authors = ["Javier Vazquez"]
description = "Automate web service creation with GraphQL and Neo4J"
homepage = "https://warpforge.github.io/warpgrapher/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/warpforge/warpgrapher"
readme = "README.md"
keywords = ["graphql", "neo4j"]
categories = ["web-programming"]
version = "0.8.4"
edition = "2018"

[features]
cosmos = ["gremlin-client"]
gremlin = ["gremlin-client"]
neo4j = ["bolt-client", "bolt-proto", "mobc", "mobc-boltrs"]

[dependencies]
# Mandatory dependencies
async-trait = "0.1.48"
http = "0.2.3"
Inflector = "0.11.4"
juniper = "0.15.4"
log = "0.4.14"
num_cpus = "1.13.0"
maplit = "1.0.2"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tracing = {version="0.1"}
tracing-futures = {version="0.2.5"}

# Optional dependencies
bolt-client = { version = "0.9.1", features = ["tokio-stream"], optional = true }
bolt-proto = { version = "0.10.0", optional = true }
gremlin-client = { version = "0.8.0", optional = true, features = ["derive"] }
mobc = { version = "0.7.2", optional = true }
mobc-boltrs = { version = "0.2.0", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
env_logger = "0.8.3"
futures = "0.3.13"
maplit = "1.0.2"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
version-sync = "0.9.2"
warpgrapher_macros = { path = "warpgrapher_macros" }
